// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component Should render 1`] = `
<View
  style={
    Array [
      null,
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ededed",
      },
      undefined,
    ]
  }
/>
`;

exports[`Container component Should render with child 1`] = `
<View
  style={
    Array [
      null,
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ededed",
      },
      undefined,
    ]
  }
>
  <Text>
    Render with children
  </Text>
</View>
`;

exports[`Container component Should render with style 1`] = `
<View
  style={
    Array [
      null,
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ededed",
      },
      Object {
        "backgroundColor": "black",
      },
    ]
  }
/>
`;
